--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url("../src/font/Montserrat-Regular.ttf");
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Montserrat';
+    src: url("../src/font/Montserrat-Bold.ttf");
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Montserrat';
+    src: url("../src/font/Montserrat-SemiBold.ttf");
+    font-weight: 600;
+    font-style: normal;
+  }
